--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "url": "git://github.com/feross/connectivity.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"no tests\" && exit 0"
   }
 }
