--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "url": "git://github.com/feross/connectivity.git"
   },
   "scripts": {
-    "test": "echo \"no tests\" && exit 0"
+    "test": "standard"
+  },
+  "devDependencies": {
+    "standard": "^9.0.2"
   }
 }
